--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.security.user.name=admin
 spring.security.user.password=admin
 
 spring.security.enabled=false
-
+spring.jpa.hibernate.ddl-auto=update
