--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,10 @@
-# Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/tidyup_db
-spring.datasource.username=tidyup_user
-spring.datasource.password=tidyup_password
+spring.datasource.url=jdbc:postgresql://localhost:5432/tidyup
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
-
-# JPA/Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql=true
+spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
 
-# Connection Pool (optional but recommended)
-spring.datasource.hikari.maximum-pool-size=5
-spring.datasource.hikari.minimum-idle=2
 
