--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
-spring.thymeleaf.suffix=.htmlspring.thymeleaf.cache=false```
-
-
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
